--- a/index.html
+++ b/index.html
@@ -426,6 +426,19 @@
   </div>
 </section>
 
+  <section class="py-12 bg-gray-50" id="location">
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl font-bold text-gray-800 mb-4">Explore Our Hostel Locations</h2>
+    <p class="text-gray-600 mb-6">Easily find hostels across different areas around campus.</p>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d..."
+      class="w-full h-80 rounded-lg shadow"
+      allowfullscreen=""
+      loading="lazy">
+    </iframe>
+  </div>
+</section>
+
   <!-- CALL TO ACTION SECTION -->
 <section class="bg-blue-600 text-white py-20 text-center">
   <div class="max-w-3xl mx-auto px-6">
@@ -486,6 +499,7 @@
 
 </body>
 </html>
+
 
 
 
