Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- FEATURED AREAS SECTION (uses local images in images/...) -->
 <section class="py-16 px-6 bg-gray-100 text-center">
-  <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10">Featured Areas</h2>
+  <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10">Available Areas</h2>
 
   <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
     <!-- SCHOOL GATE -->
@@ -494,6 +494,7 @@
 
 </body>
 </html>
+
 
 
 
