Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
   <!-- Navbar -->
   <nav class="flex items-center justify-between px-8 py-4 bg-white shadow">
     <div class="flex items-center space-x-3">
-      <img src="images/secure-home.png" alt="Secure Home Logo" class="h-12 w-auto">
+      <h1>SecureHomes</h1>
     </div>
 
     <div class="space-x-6">
       <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
       <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Listings</a>
       <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
-      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium">Login</button>
+      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Log">Login</button>
+      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Sign">Sign Up</button>
     </div>
   </nav>
 
@@ -494,6 +495,7 @@
 
 </body>
 </html>
+
 
 
 
