--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <div class="space-x-6">
       <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
-      <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Listings</a>
-      <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
+      <a href="./Listing.html" class="text-gray-700 hover:text-blue-600 font-medium">Listings</a>
+      <a href="./Features.html" class="text-gray-700 hover:text-blue-600 font-medium">Features</a>
       <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Log">Login</button>
       <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Sign">Sign Up</button>
     </div>
@@ -495,6 +495,7 @@
 
 </body>
 </html>
+
 
 
 
