--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     </div>
   </nav>
 
+  <!-- Login Modal -->
+<div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
+  <div class="bg-white rounded-lg shadow-lg p-8 w-96 relative">
+    <h2 class="text-2xl font-bold mb-4 text-center">Login</h2>
+    <form id="loginForm" class="space-y-4">
+      <input type="text" placeholder="Full Name" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <input type="text" placeholder="Username" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <input type="email" placeholder="Email" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <input type="password" placeholder="Password" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
+        Submit
+      </button>
+    </form>
+    <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-xl">&times;</button>
+  </div>
+</div>
+
   <!-- Hero Banner Section -->
   <section class="relative h-[90vh] flex items-center justify-center text-white">
     <!-- Background Image -->
@@ -495,6 +512,7 @@
 
 </body>
 </html>
+
 
 
 
