--- a/index.html
+++ b/index.html
@@ -15,38 +15,72 @@
 </head>
 <body class="bg-gray-50">
 
-  <!-- Navbar -->
+    <!-- Navbar -->
   <nav class="flex items-center justify-between px-8 py-4 bg-white shadow">
     <div class="flex items-center space-x-3">
-      <h1>SecureHomes</h1>
+      <h1 class="text-2xl font-bold text-blue-600">SecureHomes</h1>
     </div>
 
     <div class="space-x-6">
       <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
       <a href="./Listing.html" class="text-gray-700 hover:text-blue-600 font-medium">Listings</a>
       <a href="./Features.html" class="text-gray-700 hover:text-blue-600 font-medium">Features</a>
-      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Log">Login</button>
-      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium" id="Sign">Sign Up</button>
+      <button id="loginBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium">
+        Login
+      </button>
+      <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full font-medium">
+        Sign Up
+      </button>
     </div>
   </nav>
 
   <!-- Login Modal -->
-<div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
-  <div class="bg-white rounded-lg shadow-lg p-8 w-96 relative">
-    <h2 class="text-2xl font-bold mb-4 text-center">Login</h2>
-    <form id="loginForm" class="space-y-4">
-      <input type="text" placeholder="Full Name" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <input type="text" placeholder="Username" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <input type="email" placeholder="Email" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <input type="password" placeholder="Password" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
-        Submit
-      </button>
-    </form>
-    <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-xl">&times;</button>
+  <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-96 relative">
+      <h2 class="text-2xl font-bold mb-4 text-center">Login</h2>
+      <form id="loginForm" class="space-y-4">
+        <input type="text" placeholder="Full Name" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="text" placeholder="Username" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="email" placeholder="Email" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="password" placeholder="Password" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
+          Submit
+        </button>
+      </form>
+      <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-xl">&times;</button>
+    </div>
   </div>
-</div>
 
+  <!-- JavaScript -->
+  <script>
+    const loginBtn = document.getElementById('loginBtn');
+    const loginModal = document.getElementById('loginModal');
+    const closeModal = document.getElementById('closeModal');
+
+    // Show modal when login button is clicked
+    loginBtn.addEventListener('click', () => {
+      loginModal.classList.remove('hidden');
+    });
+
+    // Close modal
+    closeModal.addEventListener('click', () => {
+      loginModal.classList.add('hidden');
+    });
+
+    // Close modal when clicking outside the form
+    loginModal.addEventListener('click', (e) => {
+      if(e.target === loginModal){
+        loginModal.classList.add('hidden');
+      }
+    });
+
+    // Optional: handle form submission
+    document.getElementById('loginForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      alert('Login form submitted!');
+      loginModal.classList.add('hidden');
+    });
+  </script>
   <!-- Hero Banner Section -->
   <section class="relative h-[90vh] flex items-center justify-center text-white">
     <!-- Background Image -->
@@ -512,6 +546,7 @@
 
 </body>
 </html>
+
 
 
 
