--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
   </nav>
 
- <!-- Login Modal -->
-<div id="loginModal" class="fixed inset-0 z-50 bg-black bg-opacity-50 flex justify-center items-center hidden">
-  <!-- modal content -->
-</div>
+  <!-- Login Modal -->
+  <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-96 relative">
+      <h2 class="text-2xl font-bold mb-4 text-center">Login</h2>
       <form id="loginForm" class="space-y-4">
         <input type="text" placeholder="Email or JAMB Reg" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
         <input type="password" placeholder="Password" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -50,9 +50,9 @@
   </div>
 
   <!-- Sign Up Modal -->
-<div id="signupModal" class="fixed inset-0 z-50 bg-black bg-opacity-50 flex justify-center items-center hidden overflow-auto">
-  <!-- modal content -->
-</div>
+  <div id="signupModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden overflow-auto">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-96 relative">
+      <h2 class="text-2xl font-bold mb-4 text-center">Sign Up</h2>
       <form id="signupForm" class="space-y-4">
         <input type="text" placeholder="Full Name" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
         <input type="text" placeholder="Username" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -577,6 +577,7 @@
 
 </body>
 </html>
+
 
 
 
