--- a/index.html
+++ b/index.html
@@ -509,18 +509,58 @@
   </div>
 </section>
 
-  <section class="py-12 bg-gray-50" id="location">
-  <div class="max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl font-bold text-gray-800 mb-4">Explore Our Hostel Locations</h2>
-    <p class="text-gray-600 mb-6">Easily find hostels across different areas around campus.</p>
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d..."
-      class="w-full h-80 rounded-lg shadow"
-      allowfullscreen=""
-      loading="lazy">
-    </iframe>
+<!-- Other sections above -->
+
+<!-- Location Section -->
+<section id="location" class="py-16 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-4 text-center">
+    <h2 class="text-3xl font-bold text-gray-800 mb-8">EKSU Campus Demo Locations</h2>
+    <p class="text-gray-600 mb-6">Click on the markers to see different gates on campus.</p>
+    <div id="map" class="w-full h-96 rounded-lg shadow"></div>
   </div>
 </section>
+
+<!-- Google Maps API (replace YOUR_API_KEY with a real one) -->
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script>
+  function initMap() {
+    // Center of EKSU
+    const eksuCenter = { lat: 7.6283, lng: 5.2180 };
+
+    const map = new google.maps.Map(document.getElementById("map"), {
+      zoom: 15,
+      center: eksuCenter,
+    });
+
+    // Demo gates
+    const gates = [
+      { name: "School Gate", position: { lat: 7.6290, lng: 5.2185 } },
+      { name: "Iworoko Gate", position: { lat: 7.6255, lng: 5.2150 } },
+      { name: "Phase Two Gate", position: { lat: 7.6310, lng: 5.2200 } },
+      { name: "Satellite Gate", position: { lat: 7.6275, lng: 5.2220 } },
+      { name: "Osekita", position: { lat: 7.6240, lng: 5.2170 } },
+    ];
+
+    // Add markers with info windows
+    gates.forEach(gate => {
+      const marker = new google.maps.Marker({
+        position: gate.position,
+        map: map,
+        title: gate.name
+      });
+
+      const infoWindow = new google.maps.InfoWindow({
+        content: `<h3>${gate.name}</h3>`
+      });
+
+      marker.addListener("click", () => {
+        infoWindow.open(map, marker);
+      });
+    });
+  }
+
+  window.onload = initMap;
+</script>
 
   <!-- CALL TO ACTION SECTION -->
 <section class="bg-blue-600 text-white py-20 text-center">
@@ -577,6 +617,7 @@
 
 </body>
 </html>
+
 
 
 
