--- a/index.html
+++ b/index.html
@@ -556,6 +556,30 @@
     </a>
   </div>
 </section>
+  
+  <!-- Fill Your Contact Section -->
+<section id="contact" class="py-16 bg-gray-100">
+  <div class="max-w-3xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Fill Your Contact</h2>
+    <form class="bg-white p-8 rounded-lg shadow-md space-y-6">
+      <div>
+        <label class="block text-gray-700 mb-2" for="name">Full Name</label>
+        <input class="w-full border border-gray-300 rounded p-2" type="text" id="name" placeholder="Enter your full name">
+      </div>
+      <div>
+        <label class="block text-gray-700 mb-2" for="email">Email</label>
+        <input class="w-full border border-gray-300 rounded p-2" type="email" id="email" placeholder="Enter your email">
+      </div>
+      <div>
+        <label class="block text-gray-700 mb-2" for="message">Message</label>
+        <textarea class="w-full border border-gray-300 rounded p-2" id="message" placeholder="Write your message" rows="4"></textarea>
+      </div>
+      <button class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 transition duration-300" type="submit">
+        Submit
+      </button>
+    </form>
+  </div>
+</section>
 
   <!-- FOOTER SECTION -->
 <footer class="bg-gray-900 text-gray-300 py-12">
@@ -597,6 +621,7 @@
 
 </body>
 </html>
+
 
 
 
