--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
   <!-- Fill Your Contact Section -->
 <section id="contact" class="py-16 bg-gray-100">
   <div class="max-w-3xl mx-auto px-4">
-    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Fill Your Contact</h2>
+    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Contacts Information</h2>
     <form class="bg-white p-8 rounded-lg shadow-md space-y-6">
       <div>
         <label class="block text-gray-700 mb-2" for="name">Full Name</label>
@@ -571,6 +571,10 @@
         <input class="w-full border border-gray-300 rounded p-2" type="email" id="email" placeholder="Enter your email">
       </div>
       <div>
+        <label class="block text-gray-700 mb-2" for="email">Phone Number</label>
+        <input class="w-full border border-gray-300 rounded p-2" type="email" id="email" placeholder="Enter your email">
+      </div>
+       <div>
         <label class="block text-gray-700 mb-2" for="message">Message</label>
         <textarea class="w-full border border-gray-300 rounded p-2" id="message" placeholder="Write your message" rows="4"></textarea>
       </div>
@@ -621,6 +625,7 @@
 
 </body>
 </html>
+
 
 
 
