--- a/index.html
+++ b/index.html
@@ -126,15 +126,7 @@
   <div class="relative z-10 text-center px-6">
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
       <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
-      <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button>
-    </div>
-  </section>
-  
-  <!-- Updated Get Started Button -->
-  <a href="#contact" class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg transition duration-300">
-    Get Started
-  </a>
-</div>
+      <a href="#contact" class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button>
 
 <!-- FEATURED AREAS SECTION (uses local images in images/...) -->
 <section class="py-16 px-6 bg-gray-100 text-center">
@@ -631,6 +623,7 @@
 
 </body>
 </html>
+
 
 
 
