--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
   <div class="relative z-10 text-center px-6">
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
       <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
-      <a href="#contact" class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg transition duration-300">
+      <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });" 
+          class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg transition duration-300">
     Get Started
-  </a>
+  </button>
 </div>
 
 <!-- FEATURED AREAS SECTION (uses local images in images/...) -->
@@ -626,6 +627,7 @@
 
 </body>
 </html>
+
 
 
 
