--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
       <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
       <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });" 
-          class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg transition duration-300">
-    Get Started
-  </button>
-</div>
+         class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button> </div> </section>
 
 <!-- FEATURED AREAS SECTION (uses local images in images/...) -->
 <section class="py-16 px-6 bg-gray-100 text-center">
@@ -627,6 +624,7 @@
 
 </body>
 </html>
+
 
 
 
