--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
       </div>
       <div>
         <label class="block text-gray-700 mb-2" for="email">Phone Number</label>
-        <input class="w-full border border-gray-300 rounded p-2" type="email" id="email" placeholder="Enter your email">
+        <input class="w-full border border-gray-300 rounded p-2" type="email" id="phone number" placeholder="Enter your phone number">
       </div>
        <div>
         <label class="block text-gray-700 mb-2" for="message">Message</label>
@@ -624,6 +624,7 @@
 
 </body>
 </html>
+
 
 
 
